--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -4,12 +4,12 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <a href="#">
-                        <img src="img/about/1.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/1.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <a href="#">
-                        <img src="img/about/2.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/2.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <!-- <div class="col-md-3 col-sm-6">
