--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -496,10 +496,6 @@ section h3.section-subheading {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
     }
-
-    .portfolio-modal .close-modal{
-      position: relative;
-    }
 }
 
 .timeline {
@@ -926,7 +922,7 @@ ul.social-buttons li a.linkedin:active {
 }
 
 .portfolio-modal .close-modal {
-    position: fixed;
+    position: absolute;
     top: 25px;
     right: 25px;
     width: 75px;
