--- a/_includes/services.html
+++ b/_includes/services.html
@@ -7,118 +7,27 @@
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
-            <div class="flex-wrapper col-md-6 col-sm-6">
-              <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart yellow">
-                  <path class="circle-bg"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <path class="circle"
-                    stroke-dasharray="90, 100"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <text x="18" y="20.35" class="percentage">Python</text>
-                </svg>
-                <!-- <div class="single-chart-caption"> Python</div> -->
+            {% for skill in site.data.template.skills  %}
+              <div class="flex-wrapper col-md-2 col-sm-6">
+                <div class="single-chart">
+                  <svg viewBox="0 0 36 36" class="circular-chart yellow">
+                    <path class="circle-bg"
+                      d="M18 2.0845
+                        a 15.9155 15.9155 0 0 1 0 31.831
+                        a 15.9155 15.9155 0 0 1 0 -31.831"
+                    />
+                    <path class="circle"
+                      stroke-dasharray="{{skill.level}}, 100"
+                      d="M18 2.0845
+                        a 15.9155 15.9155 0 0 1 0 31.831
+                        a 15.9155 15.9155 0 0 1 0 -31.831"
+                    />
+                    <text x="18" y="20.35" class="percentage">{{skill.name}}</text>
+                  </svg>
+                  <!-- <div class="single-chart-caption"> Python</div> -->
+                </div>
               </div>
-
-              <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart yellow">
-                  <path class="circle-bg"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <path class="circle"
-                    stroke-dasharray="80, 100"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <text x="18" y="20.35" class="percentage">C/C++</text>
-                </svg>
-                <!-- <div class="single-chart-caption">C/C++</div> -->
-              </div>
-
-              <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart yellow">
-                  <path class="circle-bg"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <path class="circle"
-                    stroke-dasharray="50, 100"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <text x="18" y="20.35" class="percentage">JAVA</text>
-                </svg>
-                <!-- <div class="single-chart-caption">JAVA</div> -->
-              </div>
-
-            </div>
-            <div class="flex-wrapper col-md-6 col-sm-6">
-              <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart yellow">
-                  <path class="circle-bg"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <path class="circle"
-                    stroke-dasharray="70, 100"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <text x="18" y="20.35" class="percentage">Javascript</text>
-                </svg>
-                <!-- <div class="single-chart-caption"> Python</div> -->
-              </div>
-
-              <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart yellow">
-                  <path class="circle-bg"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <path class="circle"
-                    stroke-dasharray="50, 100"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <text x="18" y="20.35" class="percentage">C#</text>
-                </svg>
-                <!-- <div class="single-chart-caption">C/C++</div> -->
-              </div>
-
-              <div class="single-chart">
-                <svg viewBox="0 0 36 36" class="circular-chart yellow">
-                  <path class="circle-bg"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <path class="circle"
-                    stroke-dasharray="30, 100"
-                    d="M18 2.0845
-                      a 15.9155 15.9155 0 0 1 0 31.831
-                      a 15.9155 15.9155 0 0 1 0 -31.831"
-                  />
-                  <text x="18" y="20.35" class="percentage">Xamarin</text>
-                </svg>
-                <!-- <div class="single-chart-caption">JAVA</div> -->
-              </div>
-
-            </div>
+            {% endfor %}
             <div class="flex-wrapper col-md-6 col-sm-6">
               <div class="single-chart">
                 <svg viewBox="0 0 36 36" class="circular-chart yellow">
