--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,29 +42,26 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
-            <div class="intro-text">
-				<div class="timeline-image">
-					<figure><img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt=""><figure>
-				</div>
-                <div class="intro-lead-in">Akash Jain</div>
-                <div class="intro-heading-v2">Lead Software Developer
-                  <ul class="list-inline social-buttons">
-                      <li>
-                          <a href="https://www.facebook.com/akash.jain.3511" target="_blank" class="facebook">
-                              <i class="fa fa-facebook"></i>
-                          </a>
-                      </li>
-                      <li>
-                          <a href="https://www.linkedin.com/in/akash0212/" target="_blank" class="linkedin">
-                              <i class="fa fa-linkedin"></i>
-                          </a>
-                      </li>
-                  </ul>
-                </div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+      <div class="container">
+          <div class="intro-text">
+            <div class="timeline-image">
+              <figure><img class="img-circle img-responsive" src="img/team/profile_pic.jpg" alt=""><figure>
             </div>
-        </div>
+            <div class="intro-lead-in">{{site.data.template.user.name}}</div>
+            <div class="intro-heading-v2">{{site.data.template.user.designation}}
+              <ul class="list-inline social-buttons">
+                {% for social in site.data.template.social  %}
+                  <li>
+                      <a href="{{social.url}}" target="_blank" class="{{social.name}}">
+                          <i class="fa fa-{{social.name}}"></i>
+                      </a>
+                  </li>
+                {% endfor %}
+              </ul>
+            </div>
+            <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+          </div>
+      </div>
     </header>
 <!--
         {% for page in site.pages %}
