--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,13 +10,30 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <figure><img class="img-circle img-responsive" src="img/about/5.gif" alt=""></figure>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>April'21 - Present</h4>
+                                    <h4 class="subheading">Microsoft, Hyderabad</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Designation: <b>Software Engineer II</b></p>
+                                    <ul class="text-muted">
+                                      <li><b>STCI</b></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <figure><img class="img-circle img-responsive" src="img/about/1.jpg" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March'20 - Present</h4>
+                                    <h4>March'20 - April'21</h4>
                                     <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                 </div>
 
@@ -36,34 +53,34 @@
                                 <div class="show-more">(Show More)</div>
                             </div>
                         </li>
-                            <li>
-                                <div class="timeline-image">
-                                    <figure><img class="img-circle img-responsive" src="img/about/1.jpg" alt=""></figure>
+                        <li>
+                            <div class="timeline-image">
+                                <figure><img class="img-circle img-responsive" src="img/about/1.jpg" alt=""></figure>
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>July'16 - March'20</h4>
+                                    <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
                                 </div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h4>July'16 - March'20</h4>
-                                        <h4 class="subheading">Samsung R&D Institute, Delhi</h4>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p class="text-muted">Designation: <b>Engineer</b></p>
-                                        <ul class="text-muted">
-                                          <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
-                                            <ul style="padding-left: 10px;">
-                                              <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
-                                              <li class="extra show-less">Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
-                                              <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
-                                              <li class="extra show-less">Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
-                                            </ul>
-                                          </li>
-                                          <li><b>STR Autocomplete:</b> Developed a text auto completion module for Samsung Refrigerator wherein the text extracted from the images captured by the refrigerator camera is analyzed and corrected if read incorrectly or partially.</li>
-                                          <li class="extra show-less"><b>Adaptive Player:</b> Worked on an adaptive music player for automobile dashboards which customizes as per calendar events, person’s age, national holidays, weather, sports events as well as speed of the car.</li>
-                                          <li class="extra show-less"><b>Podcast:</b> Created a dynamic podcast application using Xamarin and RESTful APIs for faster responses.</li>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Designation: <b>Engineer</b></p>
+                                    <ul class="text-muted">
+                                      <li>Worked on an <b>AI based Conversational Agent</b> designed to help the customers with their queries related to Samsung products.
+                                        <ul style="padding-left: 10px;">
+                                          <li>Contributed towards a <b>Log-Analytics Dashboard</b> development to gain insight into the conversation flows and enhance the chatbot’s effectiveness.</li>
+                                          <li class="extra show-less">Worked on extracting <b>Key Phrases</b> from user utterances for automated evaluation of the intent classifier.</li>
+                                          <li>Created a <b>Spell Corrector</b> for correcting misspelled words in user queries while taking context into consideration.</li>
+                                          <li class="extra show-less">Built a bilingual <b>Language Detector and Translator</b> for translating Hinglish (Hindi + English) customer queries into English.</li>
                                         </ul>
-                                    </div>
-                                    <div class="show-more">(Show More)</div>
+                                      </li>
+                                      <li><b>STR Autocomplete:</b> Developed a text auto completion module for Samsung Refrigerator wherein the text extracted from the images captured by the refrigerator camera is analyzed and corrected if read incorrectly or partially.</li>
+                                      <li class="extra show-less"><b>Adaptive Player:</b> Worked on an adaptive music player for automobile dashboards which customizes as per calendar events, person’s age, national holidays, weather, sports events as well as speed of the car.</li>
+                                      <li class="extra show-less"><b>Podcast:</b> Created a dynamic podcast application using Xamarin and RESTful APIs for faster responses.</li>
+                                    </ul>
                                 </div>
-                            </li>
+                                <div class="show-more">(Show More)</div>
+                            </div>
+                        </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <figure><img class="img-circle img-responsive" src="img/about/2.jpg" alt=""></figure>
