--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <figure><img class="img-circle img-responsive" src="img/about/5.gif" alt=""></figure>
+                                <figure><img class="img-circle img-responsive" src="img/about/6.png" alt=""></figure>
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
